# Robot

./: .gitignore
src/: drive.py  to_do
src/cyclone_try/: CMakeLists.txt  package.xml
src/cyclone_try/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/cyclone_try/install/robot2/lib/robot2/: camera1_pub  camera1_sub  camera2_pub  camera2_sub
src/cyclone_try/install/robot2/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: robot2
src/cyclone_try/install/robot2/share/ament_index/resource_index/package_run_dependencies/: robot2
src/cyclone_try/install/robot2/share/ament_index/resource_index/parent_prefix_path/: robot2
src/cyclone_try/install/robot2/share/robot2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh  robot2.xml
src/cyclone_try/install/robot2/share/robot2/cmake/: robot2Config-version.cmake  robot2Config.cmake
src/cyclone_try/install/robot2/share/robot2/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  path.dsv
src/cyclone_try/install/robot2/share/robot2/launch/: robot2_launch.py
src/cyclone_try/install/robot2/share/robot2/urdf/: gazebo.urdf.xacro  my_robot.urdf.xacro
src/cyclone_try/install/robot2/share/robot2/yaml/: system.yaml
src/cyclone_try/src/: camera2_pub.cpp  camera2_sub.cpp
src/example/: CMakeLists.txt  example.xml  package.xml
src/example/bringup/config/: system.yaml
src/example/description/launch/: robot2_launch.py
src/example/description/ros2_control_description/: robot2.ros2_control.xacro
src/example/description/urdf/: my_robot.urdf.xacro
src/example/hardware/: actuator.cpp  gps.cpp  robot.cpp
src/example/hardware/include/example/: actuator.hpp  gps.hpp  robot.hpp
src/example/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/example/install/example/include/example/example/: gps.hpp  robot.hpp
src/example/install/example/lib/example/: camera1_pub  camera1_sub  camera2_pub  camera2_sub  twist_to_ackermann.py
src/example/install/example/share/ament_index/resource_index/package_run_dependencies/: example
src/example/install/example/share/example/: example.xml  package.dsv  package.ps1  package.sh
src/example/install/example/share/example/config/: system.yaml
src/example/install/example/share/example/launch/: robot2_launch.py
src/example/install/example/share/example/ros2_control_description/: robot2.ros2_control.xacro  robot2_description.xacro
src/example/install/example/share/example/urdf/: my_robot.urdf.xacro
src/example/install/robot2/lib/robot2/: camera1_pub  camera1_sub  camera2_pub  camera2_sub
src/example/install/robot2/share/robot2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.xml  robot2.xml
src/example/install/robot2/share/robot2/cmake/: robot2Config-version.cmake  robot2Config.cmake
src/example/install/robot2/share/robot2/environment/: ament_prefix_path.dsv  path.dsv
src/example/install/robot2/share/robot2/launch/: robot2_launch.py
src/example/install/robot2/share/robot2/urdf/: gazebo.urdf.xacro  my_robot.urdf.xacro
src/example/install/robot2/share/robot2/yaml/: system.yaml
src/example/log/: latest_build
src/example/robot_control/: control_validator.py
src/example/src/: camera1_pub.cpp  camera_2_image_pub.cpp  camera_bridge.cpp  camera_fastrtps_pub.cpp  camera_fastrtps_sub.cpp  camera_publisher_cyclone.cpp  camera_sub_iceoryx_nativo.cpp  camera_sub_nav2.cpp  camera_sub_ros2_iceoryx.cpp  camera_subscriber_cyclone.cpp  try.cpp
src/example/src/publishers/: image_publisher.hpp  image_publisher_gpu.hpp
src/example/src/subscribers/: image_subscriber.hpp
src/example/worlds/: my_world.world  something.cpp
src/gps_sensor_broadcaster/: CMakeLists.txt  gps_sensor_broadcaster_plugins.xml  package.xml
src/gps_sensor_broadcaster/include/gps_sensor_broadcaster/: gps_sensor_broadcaster.hpp  param_listener.hpp  visibility_control.h
src/gps_sensor_broadcaster/src/: gps_sensor_broadcaster.cpp
src/robot2/: CMakeLists.txt  package.xml  robot2.xml
src/robot2/bringup/config/: system.yaml
src/robot2/description/launch/: robot2_launch.py
src/robot2/description/ros2_control_description/: robot2.ros2_control.xacro  robot2_description.xacro
src/robot2/description/urdf/: my_robot.urdf.xacro
src/robot2/hardware/: robot.cpp
src/robot2/hardware/include/robot2/: robot.hpp
src/robot2/install/: setup.zsh
src/robot2/install/robot2/lib/robot2/: camera1_pub  camera1_sub  camera2_pub  camera2_sub
src/robot2/install/robot2/share/robot2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.xml  robot2.xml
src/robot2/install/robot2/share/robot2/cmake/: robot2Config-version.cmake  robot2Config.cmake
src/robot2/install/robot2/share/robot2/environment/: ament_prefix_path.dsv  path.dsv  path.sh
src/robot2/install/robot2/share/robot2/launch/: robot2_launch.py
src/robot2/install/robot2/share/robot2/urdf/: gazebo.urdf.xacro  my_robot.urdf.xacro
src/robot2/install/robot2/share/robot2/yaml/: system.yaml
src/robot2/log/: latest_build
src/robot2/src/: camera1_pub.cpp  camera1_sub.cpp  camera2_pub.cpp  camera2_sub.cpp
src/robot2/src/publishers/: image_pub.hpp  image_publisher.hpp
src/robot2/src/subscribers/: image_sub.hpp  image_subscriber.hpp  image_subscriber_gpu.hpp
src/robot_steering_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml  robot_steering_controller.xml
src/robot_steering_controller/doc/: userdoc.rst
src/robot_steering_controller/include/robot_steering_controller/: robot_steering_controller.hpp  visibility_control.h
src/robot_steering_controller/src/: robot_steering_controller.cpp  robot_steering_controller.yaml
src/robot_steering_controller/test/: robot_steering_controller_params.yaml  robot_steering_controller_preceding_params.yaml  test_load_robot_steering_controller.cpp  test_robot_steering_controller.cpp  test_robot_steering_controller.hpp  test_robot_steering_controller_preceding.cpp
src/serial-ros2/: CMakeLists.txt
(+28 files in other folders)
